syntax = "proto3";

option go_package = "../wsmsg";
option java_package = "com.hao.heji.proto";

package com.heji.proto;


//消息类型
enum Type {
    ADD_BILL = 0;
    ADD_BILL_ACK = 1;

    DELETE_BILL = 2;
    DELETE_BILL_ACK = 3;

    UPDATE_BILL = 4;
    UPDATE_BILL_ACK = 5;

    ADD_BOOK = 6;
    ADD_BOOK_ACK = 7;

    DELETE_BOOK = 8;
    DELETE_BOOK_ACK = 9;

    UPDATE_BOOK = 10;
    UPDATE_BOOK_ACK = 11;

    ADD_CATEGORY = 12;
    ADD_CATEGORY_ACK = 13;

    DELETE_GATEGORY = 14;
    DELETE_GATEGORY_ACK = 15;

    UPDATE_GATEGORY = 16;
    UPDATE_GATEGORY_ACK = 17;
}
//消息体
message Packet {
    string id = 1;
    Type type = 2;
    int64 timestamp = 3;
    string sender_id = 4;
    repeated string receiver_ids = 5;
    string content = 6;
}
